--- a/code-generator-server/pom.xml
+++ b/code-generator-server/pom.xml
@@ -64,7 +64,12 @@
 
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc10</artifactId>
+			<artifactId>ojdbc8</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.oracle.ojdbc</groupId>
+			<artifactId>orai18n</artifactId>
 		</dependency>
 
 		<dependency>
