--- a/code-generator-server/src/main/resources/application.properties
+++ b/code-generator-server/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=10021
 
-spring.datasource.url=jdbc:h2:mem:code-gen;DB_CLOSE_DELAY=-1;
+spring.datasource.url=jdbc:h2:mem:~/code-gen;DB_CLOSE_DELAY=-1;
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.initialization-mode=always
-#spring.datasource.schema=classpath:sql/schema.sql
+spring.datasource.schema=classpath:sql/schema.sql
 #spring.datasource.data=classpath:sql/data.sql
 #\u5728\u6D4F\u89C8\u5668\u4E2D\u5F00\u542F\u63A7\u5236\u53F0
 spring.h2.console.enabled=true
