--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,14 @@
 
             <dependency>
                 <groupId>com.oracle.database.jdbc</groupId>
-                <artifactId>ojdbc10</artifactId>
+                <artifactId>ojdbc8</artifactId>
                 <version>19.8.0.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.oracle.ojdbc</groupId>
+                <artifactId>orai18n</artifactId>
+                <version>19.3.0.0</version>
             </dependency>
 
             <dependency>
